--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,11 +1,12 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <img src="/images/eldor.jpg" class="img-responsive">
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <h1>About me</h1>
             <p>Hello, My name is Eldor. I'm full-stack web developer</p>
+            <p>I use Nodejs, Expressjs to build server side (back-end) and I use html, css/bootstrap and javascript to build client side(front-end)</p>
         </div>
         
     </div>
