--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,3 +1,17 @@
 <div class="container">
     <h1>Portfolio Page</h1>
+    <div class="row">
+        <div class="col-sm-4">
+            <img src="/images/bookFinder.png" class="img-responsive">
+        </div>
+        <div class="col-sm-4">
+            <img src="/images/e-commerce.png" class="img-responsive">
+        </div>
+        <div class="col-sm-4">
+            <img src="/images/website.png" class="img-responsive">
+        </div>
+        <div class="col-sm-4">
+            <img src="/images/zodiac.png" class="img-responsive">
+        </div>
+    </div>
 </div>
