--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
+<nav class="navbar fixed-bottom navbar-light bg-primary">
     <a class="navbar-brand" href="#">Developed and Designed by Eldor Togaymurotov</a>
     <a href="https://www.facebook.com/eldor.togaymurotov?ref=bookmarks">
     <i class="fa fa-facebook-official"></i></a>
