--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-color: cadetblue;
+}
 h1{
     color: red;
     text-align: center;
@@ -19,4 +22,7 @@ img{
 .col-sm-4{
     margin: 5px 5px 5px 5px;
     padding: 5px 5px 5px 5px;
+}
+.fa{
+    color: aliceblue;
 }
