--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -6,8 +6,17 @@
         <div class="col-sm-4">
             <h1>About me</h1>
             <p>Hello, My name is Eldor. I'm full-stack web developer</p>
-            <p>I use Nodejs, Expressjs to build server side (back-end) and I use html, css/bootstrap and javascript to build client side(front-end)</p>
-        </div>
+            <p>I use Nodejs, Expressjs to build server side (back-end) and I use html, 
+                css/bootstrap and javascript to build client side(front-end)</p>
+                <br>
+                <h3>My Resume</h3>
+                <a href="/resume/eldor-cv.pdf">
+                <i class="fa fa-download"> Download pdf</i></a>
+                <br>
+                <a href="/resume/eldor-cv.docx">
+                    <i class="fa fa-download"> Download docx</i>
+                </a>
+        </div> 
         
     </div>
 </div>
