contact info added

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,6 +2,12 @@
     <div class="row">
         <div class="col-sm-4">
             <img src="/images/eldor.jpg" class="img-responsive">
+            <br>
+            <h3><i class="fa fa-phone"></i> 4157777777</h3>
+            <h3>
+                <i class="fa fa-envelope"></i> eldorcodes@gmail.com</h3>
+                <h3>
+                    <i class="fa fa-map-marker"></i> San Francisco, CA 94121</h3>
         </div>
         <div class="col-sm-4">
             <h1>About me</h1>
