changes made and style fixed

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <img src="/images/eldor.jpg" class="img-responsive">
+            <img src="/images/eldor.jpg" class="img-thumbnail">
             <br>
-            <h3><i class="fa fa-phone"></i> 4157777777</h3>
-            <h3>
-                <i class="fa fa-envelope"></i> eldorcodes@gmail.com</h3>
-                <h3>
-                    <i class="fa fa-map-marker"></i> San Francisco, CA 94121</h3>
+            <p><i class="fa fa-phone"></i> 4157777777</p>
+            <p>
+                <i class="fa fa-envelope"></i> eldorcodes@gmail.com</p>
+                <p>
+                    <i class="fa fa-map-marker"></i> San Francisco, CA 94121</p>
         </div>
         <div class="col-sm-4">
             <h1>About me</h1>
